--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -2,4 +2,6 @@ extends base.pug
 
 
 block content 
-    h1 Watch Video!
+    h3 #{video.views} #{video.views === 1 ? "view" : "views"}
+    //- ternary operator
+    a(href=`${video.id}/edit`) Edit Video &rarr;
