220217 post, get recap
~ #6.6
recap post, get method using fake DB.

--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -6,6 +6,8 @@ html(lang="ko")
     body 
         header
             h1=pageTitle 
+            block homeContent
+            
         main
             block content
     include partials/footer.pug
