--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,6 +1,12 @@
 extends base.pug
 include mixins/video
 
+block homeContent 
+    nav 
+        ul 
+            li 
+                a(href="/videos/upload") Upload Video
+
 block content 
     h2 Welcome here you will see the trending videos
     ul
