220219 upload, edit modifying
~ # 6.24 nomadcoder
Model.exist().
middleware of mongoose(hook) -> pre, pose, etc.
making static method

--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -6,7 +6,12 @@ html(lang="ko")
     body 
         header
             h1=pageTitle 
-            block homeContent
+            nav 
+                ul 
+                    li 
+                        a(href="/videos/upload") Upload Video
+                    li 
+                        a(href="/") Home
             
         main
             block content
