220221 logged in status, connect mongo
logged in status, connect mongo
(mongostore)

--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,21 +1,30 @@
 doctype html 
 html(lang="ko")
     head 
-        title #{pageTitle} | Wetube
+        title #{pageTitle} | #{siteName}
         link(rel="stylesheet" href="https://unpkg.com/mvp.css")
     body 
         header
-            h1=pageTitle 
+            h1=pageTitle
             nav 
                 ul 
                     li 
                         a(href="/videos/upload") Upload Video
+                    if loggedIn
+                        li 
+                            a(href="/logout") Logout
+                        li 
+                            a(href="/my-profile") #{loggedInUser.name}의 Profile
+                    else
+                        li 
+                            a(href="/join") Join
+                        li 
+                            a(href="/login") Login
                     li 
                         a(href="/") Home
                     li 
                         a(href="/search") Search
-                    li 
-                        a(href="/join") Join
+                    
             
         main
             block content
