--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -7,6 +7,9 @@ block content
         input(name="username", placeholder="Username" type="text", required)
         input(name="password", placeholder="Password" type="password", required)
         input(type="submit", value="Login")
+        br
+        a(href="/users/github/start") Continue with Github &rarr;
+    
     hr
     div 
         span Don't have an account? 
