220223 Login finished Logout upload
github login finished
logout finished

--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -12,7 +12,7 @@ html(lang="ko")
                         a(href="/videos/upload") Upload Video
                     if loggedIn
                         li 
-                            a(href="/logout") Logout
+                            a(href="/users/logout") Logout
                         li 
                             a(href="/my-profile") #{loggedInUser.name}의 Profile
                     else
