220223 edit profile, protect middleware
~ #8.1

--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -12,6 +12,8 @@ html(lang="ko")
                         a(href="/videos/upload") Upload Video
                     if loggedIn
                         li 
+                            a(href="/users/edit") Edit Profile
+                        li 
                             a(href="/users/logout") Logout
                         li 
                             a(href="/my-profile") #{loggedInUser.name}의 Profile
