220224 change password, upload files, express.static upload
change password, upload files, express.static function concept

--- a/src/views/edit-profile.pug
+++ b/src/views/edit-profile.pug
@@ -1,9 +1,15 @@
 extends base
 
 block content 
-    form(method="POST")
+    img(src="/"+loggedInUser.avatarUrl, width="100", height="100")
+    form(method="POST", enctype="multipart/form-data") <!--파일을 백엔드로 보내기 위해 encode type을 정의함-->
+        label(for="avatar") Avatar
+        input(type="file", id="avatar", name="avatar", accept="image/*")
         input(placeholder="Name", name="name", type="text", required, value=loggedInUser.name)
         input(placeholder="Email", name="email",type="text", required, value=loggedInUser.email)
         input(placeholder="Username", name="username" type="text", required, value=loggedInUser.username)
         input(placeholder="Location", name="location", type="text", required, value=loggedInUser.location)
         input(type="submit", value="Update Profile")
+        if !loggedInUser.socialOnly
+            hr
+            a(href="change-password") Change Password &rarr;
