--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -3,6 +3,7 @@ html(lang="ko")
     head 
         title #{pageTitle} | #{siteName}
         link(rel="stylesheet" href="https://unpkg.com/mvp.css")
+        link(rel="stylesheet" href="/static/css/styles.css")
     body 
         header
             h1=pageTitle
@@ -34,3 +35,4 @@ html(lang="ko")
         main
             block content
     include partials/footer.pug
+    script(src="/static/js/main.js")
