--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -3,7 +3,7 @@ include ../mixins/video
 
 block content
     h1 hello
-    each video in videos 
+    each video in user.videos
         +video(video)
     else 
         li Sorry nothing found.
