--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -11,8 +11,8 @@ block content
         input(name="password2", placeholder="Confirmed Password" type="password", required)
         input(name="location", placeholder="Location" type="text", required)
         input(type="submit", value="Join")
-    hr
-    div 
+        include partials/social-login
+    div.auth-switch
         span Already have an account? 
         a(href="/login") Log in now &rarr;
     
