--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -7,11 +7,8 @@ block content
         input(name="username", placeholder="Username" type="text", required)
         input(name="password", placeholder="Password" type="password", required)
         input(type="submit", value="Login")
-        br
-        a(href="/users/github/start") Continue with Github &rarr;
-    
-    hr
-    div 
+        include partials/social-login
+    div.auth-switch    
         span Don't have an account? 
         a(href="/join") Create now &rarr;
     
