220228 video player finished upload

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -230,7 +230,7 @@ form:not(.search__form) {
   border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
-input {
+input:not([type=range]) {
   all: unset;
   padding: 15px 20px;
   border-radius: 5px;
@@ -241,7 +241,7 @@ input {
   color: white;
   width: 90%;
 }
-input::placeholder {
+input:not([type=range])::placeholder {
   color: rgba(255, 255, 255, 0.7);
 }
 
@@ -264,6 +264,64 @@ input[type=submit],
 .social-login .social__btn--github {
   background-color: transparent;
   color: azure;
+}
+
+#videoContainer {
+  width: 100%;
+  position: relative;
+}
+#videoContainer video {
+  width: 100%;
+}
+#videoContainer .videoControls {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+  align-items: center;
+  border-radius: 10px;
+  position: absolute;
+  bottom: 10px;
+  width: 95%;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 4fr 1fr auto;
+  gap: 10px;
+  justify-content: space-between;
+  background-color: #0f1117;
+  padding: 10px;
+  left: 0;
+  box-sizing: border-box;
+}
+#videoContainer .videoControls.showing {
+  opacity: 1;
+}
+#videoContainer .videoControls .videoControls__play {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+#videoContainer .videoControls .videoControls__play .videoControls__playBtn {
+  margin: 0px 15px;
+}
+#videoContainer .videoControls .videoControls__play .videoControls__time {
+  font-size: 12px;
+}
+#videoContainer .videoControls .videoControls__volume {
+  display: flex;
+  align-items: center;
+}
+#videoContainer .videoControls .videoControls__volume span {
+  margin-left: 10px;
+}
+#videoContainer .videoControls .videoControls__volume span i {
+  font-size: 20px;
+}
+#videoContainer .videoControls .videoControls__volume #mute {
+  cursor: pointer;
+}
+#videoContainer .videoControls .videoControls__volume #fullScreen {
+  cursor: pointer;
 }
 
 .search__form {
