220303 video recording upload
navigator.mediaDevices.getUserMedia,
URL.createObjectURL,
MediaRecorder, etc...
Studied concept

--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,6 +1,9 @@
 extends base.pug
 
 block content 
+    div
+        video#preview
+        button#startBtn Start Recording
     if errorMessage 
         span=errorMessage
     form(method="POST", enctype="multipart/form-data")
@@ -10,3 +13,6 @@ block content
         input(name="description", placeholder="Description", required, type="text", minlength=20)
         input(name="hashtags", placeholder="Hashtags, separated by commas", required, type="text")
         input(type="submit", value="Upload Video")
+
+block scripts
+    script(src="/static/js/recorder.js")
