220304 video thumbnail upload
Video DB add thumbUrl,
css modified

--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -3,12 +3,14 @@ extends base.pug
 block content 
     div
         video#preview
-        button#startBtn Start Recording
+        button#actionBtn Start Recording
     if errorMessage 
         span=errorMessage
     form(method="POST", enctype="multipart/form-data")
         label(for="video") Video File 
         input(type="file", accept="video/*", required, id="video", name="video")
+        label(for="thumb") Thumbnail File 
+        input(type="file", accept="image/*", required, id="thumb", name="thumb")
         input(name="title", placeholder="Title", required, type="text", maxlength=80)
         input(name="description", placeholder="Description", required, type="text", minlength=20)
         input(name="hashtags", placeholder="Hashtags, separated by commas", required, type="text")
