avatarUrl modified upload2

--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -18,8 +18,11 @@ header
                         if !loggedInUser.avatarUrl
                             span 😊
                         else 
-                            img.header__avatar(src=loggedInUser.avatarUrl)
-            else
+                            if loggedInUser.socialOnly
+                                img.header__avatar(src=loggedInUser.avatarUrl)
+                            else 
+                                img.header__avatar(src="/" + loggedInUser.avatarUrl)
+            
                 li 
                     a(href="/login") Login       
                 li 
